--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -33,3 +33,7 @@
 - src: "https://github.com/peedy2495/ansible-gfx.git"
   scm: git
   version: main
+
+- src: "https://github.com/peedy2495/ansible-export_airgappeed.git"
+  scm: git
+  version: main
