--- a/update_external_roles.yml
+++ b/update_external_roles.yml
@@ -5,7 +5,25 @@
     ansible_user: semaphore
     ansible_become: no
     ansible_ssh_common_args: "-o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=no"
+    keyFilePath: "/tmp/semaphore/.ssh/gh_ansible-globals"
 
   pre_tasks:
+
+    - name: export - git - create user ssh directory
+      ansible.builtin.file:
+        path: /tmp/semaphore/.ssh
+        state: directory
+
+    - name: export - git - deploy temporary keyfile
+      ansible.builtin.copy:
+        content: "{{ gh_ssh_key }}"
+        dest: "{{ keyFilePath }}"
+        mode: 0600
+
     - name: reload external roles
       ansible.builtin.shell: 'export HOME=/tmp/semaphore; ansible-galaxy install -r roles/requirements.yml --force'
+
+    - name: export - git - remove private key
+      ansible.builtin.file:
+        path: "{{ keyFilePath }}"
+        state: absent
