git ssh url missconfigured ...

--- a/files/playbooks.yml
+++ b/files/playbooks.yml
@@ -6,6 +6,6 @@
   scm: git
   version: main
 
-- src: "git@github.com:peedy2495/ansible-export_airgappeed.git"
+- src: "git+ssh://git@github.com:peedy2495/ansible-export_airgappeed.git"
   scm: git
   version: main
