--- a/update_external_roles.yml
+++ b/update_external_roles.yml
@@ -6,6 +6,7 @@
     ansible_become: no
     ansible_ssh_common_args: "-o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=no"
     keyFilePath: "/tmp/semaphore/.ssh/gh_ansible-globals"
+    ansible_ssh_private_key_file: "{{ keyFilePath }}"
 
   vars_files:
     - /var/lib/semaphore/data/sec.yml
