switched to pull sem_globals via ssh

--- a/files/playbooks.yml
+++ b/files/playbooks.yml
@@ -1,4 +1,4 @@
-- src: "git@github.com:peedy2495/sem_globals.git"
+- src: "git+ssh://git@github.com:peedy2495/sem_globals.git"
   scm: git
   version: main
 
