--- a/update_external_roles.yml
+++ b/update_external_roles.yml
@@ -5,8 +5,7 @@
     ansible_user: semaphore
     ansible_become: no
     ansible_ssh_common_args: "-o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=no"
-    keyFilePath: "/tmp/semaphore/.ssh/gh_ansible-globals"
-    ansible_ssh_private_key_file: "{{ keyFilePath }}"
+    keyFilePath: "/home/semaphore/.ssh"
 
   vars_files:
     - /var/lib/semaphore/data/sec.yml
@@ -15,13 +14,13 @@
 
     - name: export - git - create user ssh directory
       ansible.builtin.file:
-        path: /tmp/semaphore/.ssh
+        path: /home/semaphore/.ssh
         state: directory
 
     - name: export - git - deploy temporary keyfile
       ansible.builtin.copy:
         content: "{{ gh_ssh_key }}"
-        dest: "{{ keyFilePath }}"
+        dest: "{{ keyFilePath }}/id_ed25519"
         mode: 0600
 
     - name: reload external roles from requirements
