file consistency corrected

--- a/files/playbooks.yml
+++ b/files/playbooks.yml
@@ -1,4 +1,5 @@
 - src: git+ssh://git@github.com/peedy2495/sem_globals.git
+  scm: git
   version: main
 
 - src: "https://github.com/peedy2495/sem_desktops_ubuntu2204.git"
@@ -6,4 +7,5 @@
   version: main
 
 - src: git+ssh://git@github.com/peedy2495/ansible-export_airgapped.git
+  scm: git
   version: main
