--- a/virgin-desktops-developers_cc.yml
+++ b/virgin-desktops-developers_cc.yml
@@ -19,6 +19,8 @@
     # role: ansible-role-clamav
     clamav_offlinedb: yes
     clamav_freshclam_daemon_state: stopped
+  vars_files:
+    - /var/lib/semaphore/data/sec.yml
 
   roles:
     - role: sem_globals
