switched become to root

--- a/desktop-export-items.yml
+++ b/desktop-export-items.yml
@@ -1,7 +1,7 @@
 - hosts: all
   gather_facts: yes
   vars:
-    ansible_become: no
+    ansible_become: yes
     ansible_ssh_common_args: "-o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=no"
   vars_files:
     - /var/lib/semaphore/data/sec.yml
