changed: gdm restart instead of gdm reload

--- a/desktop-software-all.yml
+++ b/desktop-software-all.yml
@@ -75,7 +75,7 @@
           regexp: '^logo='
           state: absent
 
-      - name: Reload the gdm greeter
+      - name: Restart the gdm greeter
         systemd:
           name: gdm
-          state: reloaded
+          state: restarted
