--- a/desktop-software-default.yml
+++ b/desktop-software-default.yml
@@ -7,6 +7,15 @@
   vars_files:
     - /var/lib/semaphore/data/sec.yml
 
+  pre_tasks:
+    - name: List current directory content
+      local_action: command ls -la
+      register: directory_listing
+
+    - name: Debug directory listing
+      debug:
+        var: directory_listing.stdout
+
   roles:
     - role: sem_globals
     - role: ansible-nexus-repositories
