--- a/desktop-software-all.yml
+++ b/desktop-software-all.yml
@@ -6,6 +6,8 @@
     #ansible_become: yes
     ansible_ssh_common_args: "-o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=no"
 
+    nexus_name: ubuntu-proxy
+
     # role: ansible-antirootkits
     antirootkits_mail_from: "root@localhost"
     antirootkits_mail_to: "root@localhost"
@@ -23,6 +25,9 @@
 
     luksPartition: /dev/vda3
     luksKeyFile: /boot/keyfile
+
+    appadd_ungoogled_chromium: false
+    appadd_google-chrome: true
 
   vars_files:
     - /var/lib/semaphore/data/sec.yml
