--- a/2404-desktop-software-all.yml
+++ b/2404-desktop-software-all.yml
@@ -7,6 +7,8 @@
     ansible_ssh_common_args: "-o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=no"
 
     nexus_name: nexus-c2
+    nexus_port: 8081
+    nexus_proto: http
 
     # role: ansible-antirootkits
     antirootkits_mail_from: "root@localhost"
