--- a/desktop-software-all.yml
+++ b/desktop-software-all.yml
@@ -7,6 +7,8 @@
     ansible_ssh_common_args: "-o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=no"
 
     nexus_name: ubuntu-proxy
+    nexus_port: 8081
+    nexus_proto: http
 
     # role: ansible-antirootkits
     antirootkits_mail_from: "root@localhost"
@@ -28,6 +30,8 @@
 
     appadd_ungoogled_chromium: false
     appadd_google-chrome: true
+    appadd_ppa_qgis: false
+    appadd_qgis: true
 
   vars_files:
     - /var/lib/semaphore/data/sec.yml
