--- a/2404-desktop-software-all.yml
+++ b/2404-desktop-software-all.yml
@@ -10,6 +10,11 @@
     nexus_port: 8081
     nexus_proto: http
 
+    appadd_ungoogled_chromium: true
+    appadd_google-chrome: false
+    appadd_ppa_qgis: false
+    appadd_qgis: true
+
     # role: ansible-antirootkits
     antirootkits_mail_from: "root@localhost"
     antirootkits_mail_to: "root@localhost"
