ansible: variable ambiguity resolved

--- a/2404-desktop-CC-hardening.yml
+++ b/2404-desktop-CC-hardening.yml
@@ -16,7 +16,7 @@
     appadd_qgis: true
 
     mitogen: false
-    ansible_version: 12
+    ansible_major_version: 12
 
     # role: ansible-antirootkits
     antirootkits_mail_from: "root@localhost"
