--- a/2404-desktop-CC-rollout.yml
+++ b/2404-desktop-CC-rollout.yml
@@ -59,9 +59,9 @@
     - role: ansible-antirootkits
     - role: ansible-role-clamav
     - role: ansible-hardening-addition
-    - role: ansible-gfx
+    #- role: ansible-gfx
     - role: ansible-desktop-default-software
-    - role: ansible-desktop-developer-software
+    #- role: ansible-desktop-developer-software
 
   tasks:
     - name: Finished - Reboot
